# GhostEscape

./: .clang-format  .gitignore  CMakeLists.txt
src/: Enemy.cpp  Enemy.h  Game.cpp  Game.h  Player.cpp  Player.h  SceneMain.cpp  SceneMain.h  Spawner.cpp  Spawner.h  main.cpp
src/affiliate/: Collider.cpp  Collider.h  Sprite.cpp  Sprite.h  SpriteAnim.cpp  SpriteAnim.h
src/core/: Actor.cpp  Actor.h  AssetStore.cpp  AssetStore.h  Defs.h  Game.cpp  Game.h  Object.cpp  Object.h  ObjectAffiliate.cpp  ObjectAffiliate.h  ObjectScreen.h  ObjectWorld.cpp  ObjectWorld.h  Scene.cpp  Scene.h
src/raw/: Stats.cpp  Stats.h
src/screen/: UIMouse.cpp  UIMouse.h
src/world/: Effect.cpp  Effect.h
